# Native-Metrics

./: .gitignore  README.md
NativeMetrics/: NativeMetrics.csproj  NativeMetrics.slnx  Program.cs
NativeMetrics/Core/: Core.cs
NativeMetrics/Core/Models/: NetworkAdapterInfo.cs  ProcessInfo.cs
NativeMetrics_core/: .clang-format  CMakeLists.txt
NativeMetrics_core/include/: NativeMetrics.hpp
NativeMetrics_core/include/NativeMetrics/: NativeMetrics.hpp  Types.hpp  Util.hpp
NativeMetrics_core/include/NativeMetrics/Models/: NetworkAdapterInfo.hpp  ProcessInfo.hpp
NativeMetrics_core/src/: NativeMetrics.cpp
Scripts/: core_build.ps1
